--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user6?useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=user6
+#spring.datasource.password=user6
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user6?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=user6
-spring.datasource.password=user6
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
