--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,18 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
 		</dependency>
-
+		
+		<!-- mybatis -->
+		<dependency>
+	      <groupId>org.mybatis</groupId>
+	      <artifactId>mybatis</artifactId>
+	      <version>3.4.2</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.mybatis</groupId>
+	      <artifactId>mybatis-spring</artifactId>
+	      <version>1.3.1</version>
+	    </dependency>
 
 	</dependencies>
 	<build>
