--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,10 @@
 			<param-value>com.nts.reservation.config.WebMvcContextConfiguration
 			</param-value>
 		</init-param>
+		<init-param>
+			<param-name>throwExceptionIfNoHandlerFound</param-name>
+			<param-value>true</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
@@ -51,9 +55,4 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-	<error-page>
-		<error-code>404</error-code>
-		<location>/WEB-INF/views/error/invalidAccess.jsp</location>
-	</error-page>
 </web-app>
