--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,6 +51,10 @@
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/common/error.jsp</location>
 	</error-page>
+	<error-page>
+		<error-code>400</error-code>
+		<location>/WEB-INF/views/common/error.jsp</location>
+	</error-page>
 
 	<!-- 요청 전/후로 처리 (encoding, url pattern) -->
 	<filter>
