--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
       <scope>test</scope>
     </dependency>
     
+    <!--lombok-->
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.16.16</version>
+		<scope>provided</scope>
+	</dependency>
+    
     <!-- File Upload -->
 
  	<dependency>
