--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
 			<version>3.4.6</version>
 		</dependency>
 
+		<!-- 파일 업로드 / IO -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
