--- a/src/main/package.json
+++ b/src/main/package.json
@@ -13,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.0.12",
-    "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.5"
   }
 }
