--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user6?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=user6
 spring.datasource.password=user6
+spring.datasource.comment-image-save-directory=img/comment/
